--- a/package.json
+++ b/package.json
@@ -23,7 +23,7 @@
     "jquery-plugin",
     "ecosystem:jquery",
     "jquery",
-    "javacript",
+    "javascript",
     "scrolling",
     "smooth",
     "single_page",
